--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^3.0.2",
     "gulp-concat": "^2.5.2",
     "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.0.1",
+    "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0"
-  },
-  "engines": {
-    "node": ">=0.10.0"
   }
 }
