--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-concat": "^2.5.2",
+    "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.4",
